[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "arc-exporter"
version = "0.2.0"
description = "Safely migrate Arc Browser profiles into Chrome, Brave, Edge, Firefox, Zen, Safari, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Arc Exporter contributors" },
]
keywords = ["arc", "browser", "migration", "chrome", "firefox", "zen", "safari", "bookmarks", "passwords"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42",
    "keyring>=24",
    "psutil>=5.9",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "platformdirs>=4.2",
    "httpx>=0.27",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306 ; sys_platform == 'win32'",
]
linux = [
    "secretstorage>=3.3 ; sys_platform == 'linux'",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
    "hatchling>=1.24",
    "types-psutil",
]

[project.urls]
Homepage = "https://github.com/mhadifilms/arc-exporter"
Repository = "https://github.com/mhadifilms/arc-exporter"
Issues = "https://github.com/mhadifilms/arc-exporter/issues"

[project.scripts]
arc-exporter = "arc_exporter.cli:app"
arc-export = "arc_exporter.cli:app"

[tool.hatch.build.targets.sdist]
include = ["arc_exporter", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["arc_exporter"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF", "PL", "C4"]
ignore = [
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLR0911",
    "PLC0415",
    "PLW0603",  # singleton modules legitimately mutate module-level state
    "PLW2901",  # for-loop variable overwrite is fine
    "PLW0127",  # self-assignment is sometimes intentional
    "PLR0904",
    "PLR0917",
    "RUF001",  # ambiguous unicode chars in docstrings / strings are intentional
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF012",
    "RUF013",
    "E501",
    "B008",
    "B904",  # raising in except without `from` is sometimes intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG", "F841"]

[tool.mypy]
python_version = "3.10"
strict = false
# Cross-platform code has many sys.platform branches that mypy on any single
# host will see as unreachable; turn off the corresponding warnings so we can
# ship a clean type check on every OS.
warn_unused_ignores = false
warn_redundant_casts = false
warn_unreachable = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["arc_exporter"]
omit = ["arc_exporter/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
